# data-platform

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
examples/rules/: address_standardization.yaml  customer_crm.yaml  employee_hr.yaml  financial.yaml  iot_sensor.yaml  sales_pipeline.yaml
src/data_platform/: __init__.py
src/data_platform/cleaning/: __init__.py  engine.py  loader.py
src/data_platform/cleaning/rules/: __init__.py  anomaly_detection.py  base.py  masking.py  standardization.py  transformation.py  type_coercion.py  validation.py
src/data_platform/core/: __init__.py  base_plugin.py  plugin_manager.py  plugin_registry.py
src/data_platform/historization/: __init__.py  scd2.py
src/data_platform/plugins/aws_s3/: __init__.py  plugin.py
src/data_platform/plugins/azure_blob/: plugin.py
src/data_platform/plugins/box/: __init__.py  plugin.py
src/data_platform/plugins/dropbox/: __init__.py  plugin.py
src/data_platform/plugins/google_drive/: __init__.py  plugin.py
src/data_platform/plugins/onedrive/: __init__.py  plugin.py
src/data_platform/plugins/postgresql/: __init__.py  plugin.py
tests/: conftest.py  test_base_plugin.py  test_plugin_manager.py  test_plugin_registry.py
tests/cleaning/: test_rules.py
tests/historization/: test_scd2.py
tests/plugins/: test_aws_s3_plugin.py  test_azure_blob_plugin.py  test_box_plugin.py  test_dropbox_plugin.py  test_google_drive_plugin.py  test_onedrive_plugin.py  test_postgresql_plugin.py  test_sharepoint_plugin.py
(+2 files in other folders)
