[tool.poetry]
name = "data-platform"
version = "0.1.0"
description = "Multi-Source Data Integration Platform with plugin architecture"
authors = ["Data Platform Team"]
readme = "README.md"
packages = [{include = "data_platform", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9"
pydantic = "^2.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-mock = "^3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=data_platform --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
